--- a/contact.html
+++ b/contact.html
@@ -46,91 +46,80 @@
         </div>
       </div>
       <article>
-        <h1>Demande de contact :</h1>
         <div class="form">
+          <h1>Demande de contact :</h1>
           <form name="contact" onsubmit="return validationForm();">
-            <div class="formElement">
-              <label for="date">Date du contact : </label>
-              <input type="date" id="date" required />
-            </div>
-            <div class="formElement">
-              <label for="nom">Nom : </label>
-              <input
-                type="text"
-                id="nom"
-                placeholder="Entrez votre nom"
-                required
-              />
-              <span id="errorNom" class="erreur"></span>
-            </div>
-            <div class="formElement">
-              <label for="prenom">Prénom : </label>
-              <input
-                type="text"
-                id="prenom"
-                placeholder="Entrez votre prénom"
-                required
-              />
-              <span id="errorPrenom" class="erreur"></span>
-            </div>
-            <div class="formElement">
-              <label for="mail">Email : </label>
-              <input
-                type="text"
-                id="mail"
-                name="mail"
-                placeholder="exemple@xyz.com"
-                required
-                novalidate
-              />
-              <span id="errorMail" class="erreur"></span>
-            </div>
-            <div class="formElement" id="genre">
-              <label for="genreF">Genre : </label>
+            <label for="date">Date du contact : </label>
+            <input type="date" id="date" required />
+
+            <label for="nom" id="labName">Nom : </label>
+            <input
+              type="text"
+              id="nom"
+              placeholder="Entrez votre nom"
+              required
+            />
+
+            <label for="prenom" id="labPren">Prénom : </label>
+            <input
+              type="text"
+              id="prenom"
+              placeholder="Entrez votre prénom"
+              required
+            />
+
+            <label for="mail" id="labMail">Email : </label>
+            <input
+              type="text"
+              id="mail"
+              name="mail"
+              placeholder="exemple@xyz.com"
+              required
+              novalidate
+            />
+            <span id="errorMail" class="erreur"></span>
+
+            <label for="genreF">Genre : </label>
+            <br />
+            <div id="labNais">
               <input type="radio" id="genreF" name="radioGenre" required />
               <label for="genreF" class="labelGenre" id="labelF">Femme</label>
               <input type="radio" id="genreM" name="radioGenre" required />
               <label for="genreM" class="labelGenre" id="labelH">Homme</label>
             </div>
-            <div class="formElement">
-              <label for="naissance">Date de naissance : </label>
-              <input type="date" id="naissance" required />
-            </div>
-            <div class="formElement" id="dropDownFct">
-              <label for="fonction">Fonction : </label>
-              <select name="fonction" id="selectFct" required>
-                <option value="">--Choisissez une option--</option>
-                <option value="enseignant">Enseignant</option>
-                <option value="etudiant">Étudiant</option>
-                <option value="ing">Ingénieur</option>
-                <option value="ouvr">Ouvrier</option>
-                <option value="ceo">Chef d'Entreprise</option>
-                <option value="compt">Expert Comptable</option>
-                <option value="med">Médecin</option>
-                <option value="inf">Influenceur</option>
-                <option value="cuisine">Cuisinier</option>
-                <option value="accab">Policier</option>
-              </select>
-            </div>
-            <div class="formElement">
-              <label for="obj">Sujet : </label>
-              <input
-                type="text"
-                id="obj"
-                placeholder="Entrez le sujet de votre mail"
-                required
-              />
-            </div>
-            <div class="formElement" id="contenuContact">
-              <label for="contenu">Contenu : </label>
-              <textarea
-                required
-                placeholder="Entrez le contenu de votre mail"
-              ></textarea>
-            </div>
-            <div class="formElement">
-              <input type="submit" />
-            </div>
+            <label for="naissance">Date de naissance : </label>
+            <input type="date" id="naissance" required />
+
+            <label for="fonction">Fonction : </label>
+            <select name="fonction" id="selectFct" required>
+              <option value="">--Choisissez une option--</option>
+              <option value="enseignant">Enseignant</option>
+              <option value="etudiant">Étudiant</option>
+              <option value="ing">Ingénieur</option>
+              <option value="ouvr">Ouvrier</option>
+              <option value="ceo">Chef d'Entreprise</option>
+              <option value="compt">Expert Comptable</option>
+              <option value="med">Médecin</option>
+              <option value="inf">Influenceur</option>
+              <option value="cuisine">Cuisinier</option>
+              <option value="accab">Policier</option>
+            </select>
+
+            <label for="obj">Sujet : </label>
+            <input
+              type="text"
+              id="obj"
+              placeholder="Entrez le sujet de votre mail"
+              required
+            />
+
+            <label for="contenu">Contenu : </label>
+            <textarea
+              required
+              placeholder="Entrez le contenu de votre mail"
+            ></textarea>
+
+            <input type="submit" />
           </form>
         </div>
       </article>
